fix position of stills on mobile and close menu button.

--- a/src/components/Lightbox/Lightbox.module.scss
+++ b/src/components/Lightbox/Lightbox.module.scss
@@ -4,7 +4,6 @@
 
 .lightboxContainer {
   position: absolute;
-  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
