--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -254,7 +254,7 @@ https://flickity.metafizzy.co
   top: 0;
   left: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 .headroom--unfixed {
   position: fixed;
